--- a/public/assets/css/profile.css
+++ b/public/assets/css/profile.css
@@ -1,16 +1,18 @@
 #hero h2{
 
 }
+#hero{
+  margin: 0 0 3rem 0;
+}
 #profileFirstId{
   background-image: url('images/keyboard.png');
 	background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  margin-bottom: 3rem;
 }
 #profileFeed{
-  height: 500px;
+  height: 700px;
   width: 60%;
   border: 1px solid;
   padding: 0;
@@ -18,11 +20,12 @@
   background-color: rgb(225,225,225,.6);
   border-radius: 37px;
   overflow: auto;
+  font-size: .5rem;
   /* display: flex;
   justify-content: space-around; */
 }
 #profileSection{
-  height: 500px;
+  height: 300px;
   width: 27%;
   border: 1px solid black;
   padding: 0;
@@ -33,6 +36,7 @@
   justify-content: center; */
 
 }
+
 #profileFirstId button{
   display: flex;
   justify-content: center;
@@ -45,15 +49,55 @@
 #profileFirstId button:hover{
   background-color: slategray;
 }
-#profileFeed ul{
-  height: 250px;
-  width: 27%;
+i{
+  font-size: 2rem;
+}
+#profileFeed li{
+  height: auto;
+  width: 43%;
   margin: 1rem;
   float: left;
-  border: 1px solid black;
+  border: 3px solid black;
   padding: 0;
   list-style: none;
+  border-radius: 20px;
+  padding: 9px;
 }
 #profileFeed div{
   
+}
+#profileFeed section{
+  border:1px solid black;
+}
+#profileFeed img{
+  height: 200px;
+  float: left;
+  margin: 0.2rem;
+}
+ul li div+div h2{
+  font-size: 1.1rem;
+    color: black;
+    font-weight: 800;
+}
+@media screen and (max-width:1450px){
+  #profileFeed{
+    width: 89%;
+    height: 695px;
+    margin-left: 7%;
+  }
+  #profileFirstId button{
+    width:150px ;
+  }
+  #profileSection{
+    width: 92%;
+    height: 150px;
+    margin-bottom: 0;
+    display: flex;
+  }
+}
+@media screen and (max-width:930px){
+  #profileFeed li{
+    width: 79%;
+    margin-left: 3rem;
+  }
 }
