--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,8 @@
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li>
+									
+									<!-- <li>
 										<a href="#">Dropdown</a>
 										<ul>
 											<li><a href="#">Lorem ipsum dolor</a></li>
@@ -42,7 +43,7 @@
 											</li>
 											<li><a href="#">Veroeros feugiat</a></li>
 										</ul>
-									</li>
+									</li> -->
 									<li><a href="left-sidebar.html">Builds</a></li>
 									<li class="break"><a href="right-sidebar.html">Learn</a></li>
 									<li><a href="/login"><i class="fas fa-sign-in-alt"></i></a></li>
@@ -55,22 +56,22 @@
 					<!-- Hero -->
 						<section id="hero" class="container">
 							<header>
-								<h2>Telephasic is a responsive
-								<br />
-								site template by <a href="http://html5up.net">HTML5 UP</a></h2>
+								<h2>PC Budget Builder
+									Choose your Budget and get a build
+								</h2>
 							</header>
 							<p>Easiest way to get into PC building </p>
 							<ul class="actions">
-								<li><a href="#" class="button">$400</a></li>
-								<li><a href="#" class="button">$500</a></li>
-								<li><a href="#" class="button">$600</a></li>
-								<li><a href="#" class="button">$700</a></li>
-								<li><a href="#" class="button">$800</a></li>
-								<li><a href="#" class="button">$900</a></li>
-								<li><a href="#" class="button">$1000</a></li>
-								<li><a href="#" class="button">$1100</a></li>
-								<li><a href="#" class="button">$1200</a></li>
-								<li><a href="#" class="button">$1300</a></li>
+								<li data="400"><a href="#" class="button">$400</a></li>
+								<li data="500"><a href="#" class="button">$500</a></li>
+								<li data="600"><a href="#" class="button">$600</a></li>
+								<li data="700"><a href="#" class="button">$700</a></li>
+								<li data="800"><a href="#" class="button">$800</a></li>
+								<li data="900"><a href="#" class="button">$900</a></li>
+								<li data="1000"><a href="#" class="button">$1000</a></li>
+								<li data="1100"><a href="#" class="button">$1100</a></li>
+								<li data="1200"><a href="#" class="button">$1200</a></li>
+								<li data="1300"><a href="#" class="button">$1300</a></li>
 							</ul>
 						</section>
 
@@ -91,117 +92,118 @@
 				<div class="wrapper">
 					<div class="container">
 						<div id="firstId" class="row">
+							
 							<section id="gpuOne" >
+								<section class='inner'>
 								<div >
-									<a href="#" class="image featured first"><img src="img/pixel.png" alt="" /></a>
+									<a href="#" class="image featured first"><img src="img/stockMobo.png" alt="" /></a>
 								</div>
 								<header>
-									<h2>Motherboard</h2> <h3>Asrock joe momma</h3>
+									<h2>Motherboard</h2> <h3>Asrock </h3>
 								</header>
-								<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur vel
-								sem sit dolor neque semper magna. Lorem ipsum dolor sit amet consectetur et sed
-								adipiscing elit. Curabitur vel sem sit.</p>
+								<p>The Motherboard is where everything will connect to. Different sections of the motherboard perform differnt tasks that make a computer whole</p>
 								<ul class="actions">
 									<li><a href="#" class="button">Purchase Now</a></li>
 								</ul>
 							</section>
+							</section>
 							<section >
+								<section class='inner'>
 								<div >
-									<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#" class="image featured"><img src="img/stockCPU.png" alt="" /></a>
 								</div>
 								<header>
 									<h2>CPU</h2>
 								</header>
-								<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur vel
-								sem sit dolor neque semper magna. Lorem ipsum dolor sit amet consectetur et sed
-								adipiscing elit. Curabitur vel sem sit.</p>
+								<p>The CPU is the brain of your computer . It contains threads and Cores. The Speed is based on GHz usually the higher the speed the more performance but performance is also based the number of Cores and Threads</p>
 								<ul class="actions">
-									<li><a href="#" class="button">Elevate my awareness</a></li>
+									<li><a href="#" class="button">Purchase Now</a></li>
 								</ul>
 							</section>
+							</section>
 							<section id="gpuTwo" >
+								<section class='inner'>
 								<div >
-									<a href="#" class="image featured first"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="#" class="image featured first"><img src="img/stockGPU.png" alt="" /></a>
 								</div>
 								<header>
 									<h2>Graphics Card</h2>
 								</header>
-								<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur vel
-								sem sit dolor neque semper magna. Lorem ipsum dolor sit amet consectetur et sed
-								adipiscing elit. Curabitur vel sem sit.</p>
+								<p>The graphgics card also known as the (GPU) is a card that handles any graphics you render to your computer. This is the part you want to prioritize if you do video editing or PC gaming. The better the grpahics card the more smoothly images can be produced</p>
 								<ul class="actions">
-									<li><a href="#" class="button">Elevate my awareness</a></li>
+									<li><a href="#" class="button">Purchase Now</a></li>
 								</ul>
+								</section>
 							</section>
 							<section >
+								<section class='inner'>
 								<div >
-									<a href="#" class="image featured first"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="#" class="image featured first"><img src="img/stockRAM.png" alt="" /></a>
 								</div>
 								<header>
 									<h2>RAM</h2>
 								</header>
-								<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur vel
-								sem sit dolor neque semper magna. Lorem ipsum dolor sit amet consectetur et sed
-								adipiscing elit. Curabitur vel sem sit.</p>
+								<p>The RAM also known as the (random access memory) , not to get confused with the stoage hard drive since they both deal with memory, deals with temprary memory in your computer. Applications and tabs create memory and it is stored so the more memory you have the more applications you can run simultaneously. </p>
 								<ul class="actions">
-									<li><a href="#" class="button">Elevate my awareness</a></li>
+									<li><a href="#" class="button">Purchase Now</a></li>
 								</ul>
+								</section>
 							</section>
 							<section id="gpuThree" >
+								<section class='inner'>
 								<div >
-									<a href="#" class="image featured first"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="#" class="image featured first"><img src="img/stockStorage.png" alt="" /></a>
 								</div>
 								<header>
 									<h2>Storage</h2>
 								</header>
-								<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur vel
-								sem sit dolor neque semper magna. Lorem ipsum dolor sit amet consectetur et sed
-								adipiscing elit. Curabitur vel sem sit.</p>
+								<p>This is your hard drive where all your files will be stored in as well as your opperating system. I will always recommend an SSD instead of a normal hard drive because of how dramatic the performance difference is. An SSD is one of the best upgrades you can do to your system and nowadays they're a lot cheaper than before. The next upgrade to a SSD would be an m.2 drive where some mothboards are supporting now. </p>
 								<ul class="actions">
-									<li><a href="#" class="button">Elevate my awareness</a></li>
+									<li><a href="#" class="button">Purchase Now</a></li>
 								</ul>
+								</section>
 							</section>
 							<section >
+								<section class='inner'>
 								<div >
-									<a href="#" class="image featured first"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="#" class="image featured first"><img src="img/stockPSU.png" alt="" /></a>
 								</div>
 								<header>
 									<h2>Power Supply</h2>
 								</header>
-								<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur vel
-								sem sit dolor neque semper magna. Lorem ipsum dolor sit amet consectetur et sed
-								adipiscing elit. Curabitur vel sem sit.</p>
+								<p>The PSU known as the power supply provides the nessesarry power you system needs. Thw wattage you will will differ with the different parts you will contain. If you have a powerful CPU and GPU you usually need a higher wattage PSU to support. All the builds I recommend will have no issues with power. </p>
 								<ul class="actions">
-									<li><a href="#" class="button">Elevate my awareness</a></li>
+									<li><a href="#" class="button">Purchase Now</a></li>
 								</ul>
+								</section>
 							</section>
 							<section id="gpuFour" >
+								<section class='inner'>
 								<div >
-									<a href="#" class="image featured first"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="#" class="image featured first"><img src="img/stockCase.png" alt="" /></a>
 								</div>
 								<header>
 									<h2>Case</h2>
 								</header>
-								<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur vel
-								sem sit dolor neque semper magna. Lorem ipsum dolor sit amet consectetur et sed
-								adipiscing elit. Curabitur vel sem sit.</p>
+								<p>The Case is where your PC will now live. There are many features you can look for but for a budget build it doesn't have to be expensive. The cases I will recommend will always be for a regular ATX motherboard. If you are intrested in a smaller system you would be intrested in a mini ATX build.</p>
 								<ul class="actions">
-									<li><a href="#" class="button">Elevate my awareness</a></li>
+									<li><a href="#" class="button">Purchase Now</a></li>
 								</ul>
+								</section>
 							</section>
 							<section >
+								<section class='inner'>
 								<div >
-									<a href="#" class="image featured first"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="#" class="image featured first"><img src="img/stockCooler.png" alt="" /></a>
 								</div>
 								<header>
 									<h2>CPU Cooler</h2>
 								</header>
-								<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur vel
-								sem sit dolor neque semper magna. Lorem ipsum dolor sit amet consectetur et sed
-								adipiscing elit. Curabitur vel sem sit.</p>
+								<p>The CPU cooler is the cooler you will install on top of your CPU. Some CPU come with a stock cooler but it is notorious  </p>
 								<ul class="actions">
-									<li><a href="#" class="button">Elevate my awareness</a></li>
+									<li><a href="#" class="button">Purchase Now</a></li>
 								</ul>
+								</section>
 							</section>
 						</div>
 					</div>
@@ -210,8 +212,8 @@
 			<!-- Promo -->
 				<div id="promo-wrapper">
 					<section id="promo">
-						<h2>Neque semper magna et lorem ipsum adipiscing</h2>
-						<a href="#" class="button">Breach the thresholds</a>
+						<h2>Sign in and check out other people's builds and post your own!</h2>
+						<a href="/login" class="button">Login</a>
 					</section>
 				</div>
 
@@ -255,9 +257,8 @@
 				<div id="footer-wrapper">
 					<div id="footer" class="container">
 						<header class="major">
-							<h2>Euismod aliquam vehicula lorem</h2>
-							<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur vel sem sit<br />
-							dolor neque semper magna lorem ipsum feugiat veroeros lorem ipsum dolore.</p>
+							<h2>Leave me a message! </h2>
+							<p>Intrested to know more? I'd love to talk more about computers or how I built this website. </p>
 						</header>
 						<div class="row">
 							<section class="col-6 col-12-narrower">
@@ -281,7 +282,7 @@
 									</div>
 								</form>
 							</section>
-							<section class="col-6 col-12-narrower">
+							<!-- <section class="col-6 col-12-narrower">
 								<div class="row gtr-0">
 									<ul class="divided icons col-6 col-12-mobile">
 										<li class="icon brands fa-twitter"><a href="#"><span class="extra">twitter.com/</span>untitled</a></li>
@@ -294,7 +295,7 @@
 										<li class="icon brands fa-pinterest"><a href="#"><span class="extra">pinterest.com/</span>untitled</a></li>
 									</ul>
 								</div>
-							</section>
+							</section> -->
 						</div>
 					</div>
 					<div id="copyright" class="container">
@@ -313,6 +314,7 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="main.js"></script>
 
 	</body>
 </html>
