--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -34,10 +34,13 @@
                     <input type="text" class="form-control" name="email">
                 </div>
                 <div class="form-group">
+                  <label>Username</label>
+                  <input type="text" class="form-control" name="userName">
+              </div>
+                <div class="form-group">
                     <label>Password</label>
                     <input type="password" class="form-control" name="password">
                 </div>
-        
                 <input name="signup" id="login" class="btn btn-block login-btn mb-4" type="submit" value="SignUp">
             </form>
 
