--- a/views/index.ejs
+++ b/views/index.ejs
@@ -57,26 +57,30 @@
 						<section id="hero" class="container">
 							<header>
 								<h2>PC Budget Builder
-									Choose your Budget and get a build
+									
 								</h2>
 							</header>
 							<p>Easiest way to get into PC building </p>
-							<ul class="actions">
-								<li data="400"><a href="#" class="button">$400</a></li>
-								<li data="500"><a href="#" class="button">$500</a></li>
-								<li data="600"><a href="#" class="button">$600</a></li>
-								<li data="700"><a href="#" class="button">$700</a></li>
-								<li data="800"><a href="#" class="button">$800</a></li>
-								<li data="900"><a href="#" class="button">$900</a></li>
-								<li data="1000"><a href="#" class="button">$1000</a></li>
-								<li data="1100"><a href="#" class="button">$1100</a></li>
-								<li data="1200"><a href="#" class="button">$1200</a></li>
-								<li data="1300"><a href="#" class="button">$1300</a></li>
-							</ul>
+							
 						</section>
+						
 
 				</div>
 				<section class="info">
+					<h2 class="priceHeader">Prices</h2>
+					<h2 class="priceHeaderChooser">Choose your Budget and get a build</h2>
+					<ul id="price" class="actions">
+						<li data="400" ><a  class="button">$400</a></li>
+						<li data="500" ><a href="" class="button">$500</a></li>
+						<li data="600" ><a href="" class="button">$600</a></li>
+						<li data="700" ><a href="" class="button">$700</a></li>
+						<li data="800" ><a href="" class="button">$800</a></li>
+						<li data="900" ><a href="" class="button">$900</a></li>
+						<li data="1000" ><a href="" class="button">$1000</a></li>
+						<li data="1100" ><a href="" class="button">$1100</a></li>
+						<li data="1200" ><a href="" class="button">$1200</a></li>
+						<li data="1300" ><a href="" class="button">$1300</a></li>
+					</ul>
 					<!-- <form class="" action="index.html" method="post">
 						<select class="" name="">
 
@@ -96,14 +100,14 @@
 							<section id="gpuOne" >
 								<section class='inner'>
 								<div >
-									<a href="#" class="image featured first"><img src="img/stockMobo.png" alt="" /></a>
+									<a href="#" class="image featured first moboImg"><img src="img/stockMobo.png" alt="" /></a>
 								</div>
 								<header>
-									<h2>Motherboard</h2> <h3>Asrock </h3>
+									<h2 class="moboBrand">Motherboard</h2> <h3 class="moboProduct"></h3>
 								</header>
 								<p>The Motherboard is where everything will connect to. Different sections of the motherboard perform differnt tasks that make a computer whole</p>
 								<ul class="actions">
-									<li><a href="#" class="button">Purchase Now</a></li>
+									<li><a href="#" class="button moboLink">Purchase Now</a></li>
 								</ul>
 							</section>
 							</section>
