--- a/public/assets/css/build.css
+++ b/public/assets/css/build.css
@@ -4,8 +4,9 @@
 }
 
 #profileFeed section{
-    height: 800px;
-    background-color: #7a7a7aed;
+    height: auto;
+    display: inline-block;
+    background-color: #d9d1d1ed;
     width: 77%;
     margin-left: 9%;
     margin-top: 1rem;
@@ -27,6 +28,77 @@
 	border: .5rem solid black;
 
 }
+button {
+    outline: none;
+    height: 40px;
+    text-align: center;
+    width: 130px;
+    border-radius: 40px;
+    background: #fff;
+    border: 2px solid #1ECD97;
+    color: #1ECD97;
+    letter-spacing: 1px;
+    text-shadow: 0;
+    font-size: 12px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: all 0.25s ease;
+  }
+  button:hover {
+    color: white;
+    background: #1ECD97;
+  }
+  button:active {
+    letter-spacing: 2px;
+  }
+  /* button:after {
+    content: "SUBMIT";
+  } */
+  
+  .onclic {
+    width: 40px;
+    border-color: #bbbbbb;
+    border-width: 3px;
+    font-size: 0;
+    border-left-color: #1ECD97;
+    -webkit-animation: rotating 2s 0.25s linear infinite;
+            animation: rotating 2s 0.25s linear infinite;
+  }
+  .onclic:after {
+    content: "";
+  }
+  .onclic:hover {
+    color: #1ECD97;
+    background: white;
+  }
+  
+  .validate {
+    font-size: 13px;
+    color: white;
+    background: #1ECD97;
+  }
+  .validate:after {
+    font-family: "FontAwesome";
+    content: "";
+  }
+  
+  @-webkit-keyframes rotating {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  }
+  
+  @keyframes rotating {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  }
 @keyframes gradient {
 	0% {
 		background-position: 0% 50%;
@@ -57,7 +129,7 @@ img{
 #profileFeed .postDiv + div div{
     width: 100%;
     height: auto;
-
+    border-radius: 29px;
     border: 1px solid black;
 
 }
@@ -65,6 +137,10 @@ img{
     font-weight: 800;
     font-size: 1.5rem;
     margin: 0 1rem;
+    background-color: white;
+    border-radius: 16px;
+    padding-left: 17px;
+    color: black;
 
 }
 .postDiv i{
@@ -114,8 +190,150 @@ img{
 
     }
 #profileSection{
-    height: 300px;
+    height: 210px;
+    width: auto;
+    border-radius: 0;
+    background-color: bisque;
 }
+.text-input {
+    position: relative;
+    margin-top: 50px;
+  }
+#inp{
+  padding: 0;
+  padding-top: 16px;
+}
+  .text-input input[type=text] {
+    display: inline-block;
+    width: 100%;
+    height: 40px;
+    box-sizing: border-box;
+    outline: none;
+    border: 1px solid lightgray;
+    border-radius: 3px;
+    padding: 10px 10px 10px 100px;
+    transition: all 0.1s ease-out;
+  }
+  .text-input input[type=text] + label {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    height: 40px;
+    line-height: 40px;
+    color: white;
+    border-radius: 3px 0 0 3px;
+    padding: 0 20px;
+    background: #E03616;
+    transform: translateZ(0) translateX(0);
+    transition: all 0.3s ease-in;
+    transition-delay: 0.2s;
+  }
+  .text-input input[type=text]:focus + label {
+    transform: translateY(-120%) translateX(0%);
+    border-radius: 3px;
+    transition: all 0.1s ease-out;
+  }
+  .text-input input[type=text]:focus {
+    padding: 10px;
+    transition: all 0.3s ease-out;
+    transition-delay: 0.2s;
+  }
+  .inp {
+    position: relative;
+    margin: auto;
+    width: 100%;
+    max-width: 280px;
+    border-radius: 3px;
+    overflow: hidden;
+  }
+  .inp .label {
+    position: absolute;
+    top: 20px;
+    left: 12px;
+    font-size: 16px;
+    color: rgba(0, 0, 0, 0.5);
+    font-weight: 500;
+    transform-origin: 0 0;
+    transform: translate3d(0, 0, 0);
+    transition: all 0.2s ease;
+    pointer-events: none;
+  }
+  .inp .focus-bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.05);
+    z-index: -1;
+    transform: scaleX(0);
+    transform-origin: left;
+  }
+  .inp input {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+         appearance: none;
+    width: 100%;
+    border: 0;
+    font-family: inherit;
+    padding: 16px 12px 0 12px;
+    height: 56px;
+    font-size: 16px;
+    font-weight: 400;
+    background: rgba(0, 0, 0, 0.02);
+    box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.3);
+    color: #000;
+    transition: all 0.15s ease;
+  }
+  .inp input:hover {
+    background: rgba(0, 0, 0, 0.04);
+    box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.5);
+  }
+  .inp input:not(:-moz-placeholder-shown) + .label {
+    color: rgba(0, 0, 0, 0.5);
+    transform: translate3d(0, -12px, 0) scale(0.75);
+  }
+  .inp input:not(:-ms-input-placeholder) + .label {
+    color: rgba(0, 0, 0, 0.5);
+    transform: translate3d(0, -12px, 0) scale(0.75);
+  }
+  .inp input:not(:placeholder-shown) + .label {
+    color: rgba(0, 0, 0, 0.5);
+    transform: translate3d(0, -12px, 0) scale(0.75);
+  }
+  .inp input:focus {
+    background: rgba(0, 0, 0, 0.05);
+    outline: none;
+    box-shadow: inset 0 -2px 0 #0077FF;
+  }
+  .inp input:focus + .label {
+    color: #0077FF;
+    transform: translate3d(0, -12px, 0) scale(0.75);
+  }
+  .inp input:focus + .label + .focus-bg {
+    transform: scaleX(1);
+    transition: all 0.1s ease;
+  }
+  .fa-heart:hover:before{
+    color:red
+  }
+  #profileFirstId button{
+    width: 83%;
+    color: black;
+    background-color: bisque;
+    font-weight: 800;
+  }
+  #profileFeed #commentSection{
+    background-color: black;
+  }
+  #profileFeed #commentSection p {
+    margin: 8px 0;
+  }
+  /* .input {
+    visibility: hidden;
+  } */
+  
 @media screen and (max-width:730px){
     #profileFeed img{
         padding-left: 1rem;
@@ -131,10 +349,10 @@ img{
 }
 @media screen and (max-width:1450px){
     #profileSection{
-        height: 261px;
-        width: 70%;
-        margin-left: 17%;
-    }
+        /* height: 261px; */
+        /* width: 70%; */
+        /* margin-left: 17%;
+    } */
 
 }
 @media screen and (max-width:650px){
