--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -129,17 +129,19 @@ input, select, textarea {
 .info{
 	border: 1px solid black;
     margin: 0 0 0 0;
-		height: 100px;
-		width: 100%
+	height: 500px;
+	width: 100%;
+	background-image: url('images/custoimPrice.png');
 }
 #wholeHeader{
-	height: 100%;
+	height: 1000px;
     padding-top: 4rem;
     /* background-color: #A9A9A9; */
 		/* background-image: url('images/customBuild.png'); */
-		background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('images/customBuild.png');
+		background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('images/custom.png');
 		background-repeat: no-repeat;
 		background-size: cover;
+		background-position: center;
 }
 #header #logo img{
 	height: 73px;
@@ -2005,6 +2007,7 @@ margin: 0;
 	ul.menu {
 		list-style: none;
 		padding-left: 0;
+		margin: 0;
 	}
 
 		ul.menu li {
@@ -2254,9 +2257,9 @@ margin: 0;
 		-webkit-transform: translate3d(0, 0, 0);
 		position: relative;
 		border-top: solid 1px #c2c7cc;
-		padding: 6em 0 6em 0;
-		background-image: url("images/overlay.png"), url("images/footer.svg");
-		background-size: 128px 128px,				100% 100%;
+		padding: 6em 0 0em 0;
+		background-image: url("images/5.png");
+		background-size: cover;
 	}
 
 /* Header */
@@ -2412,10 +2415,26 @@ margin: 0;
 		width: 100%;
     margin: 0;
 	}
-	#hero ul{
+	#price{
 		    width: 100%;
+			padding-left: 10%;
+			padding-top: 5rem;
 	}
-	#hero ul li{
+	
+	.priceHeader{
+		text-align: center;
+    	font-size: 4rem;
+    	color: white;
+    	font-weight: 200;
+	}
+	.priceHeaderChooser{
+		font-size: 2rem;
+		color: white;
+    	font-weight: 200;
+		text-align: center;
+		padding: 1rem 0;
+	}
+	#price  li{
 		height: 100%;
 		width: 100px;
 		margin: 1rem;
@@ -2424,6 +2443,7 @@ margin: 0;
 		#hero h2 {
 			color: #fff;
 			font-size: 3em;
+			margin: 2rem;
 		}
 
 		#hero strong {
@@ -2437,9 +2457,10 @@ margin: 0;
 		#hero p {
 			font-size: 1.5em;
 			line-height: 1.5em;
+			padding: 2rem;
 		}
 
-		#hero .button {
+		#price .button {
 			background: linear-gradient(-45deg,#23a6d5, #05258f, #a82b05, #cc1515 );
 			background-size: 400% 382%;
 			animation: gradient 15s ease infinite;
@@ -2467,7 +2488,22 @@ margin: 0;
 			#hero a:hover {
 				border-color: rgba(255, 255, 255, 0);
 			}
-
+			@media only screen and (max-width:2000px) and (min-width:800px){
+				#hero h2 {
+					color: #fff;
+					font-size: 4em;
+					margin: 2rem;
+					margin-left: 60%;
+					margin-top: 10%;
+					font-weight: 800;
+				}
+				#hero p {
+					font-size: 1.5em;
+					line-height: 1.5em;
+					padding: 2rem;
+					margin-left: 49%;
+				}
+			}
 /* Promo */
 
 	#promo {
