--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -56,9 +56,9 @@
 					<!-- Hero -->
 						<section id="hero" class="container">
 							<header>
-								<h2>Profile</h2>
+								<h2>Welcome to your Profile, <%=userName%></h2>
 							</header>
-							<p>This is your profile, you can see your posts and saved builds</p>
+							<p>Your posts and your likes will live here</p>
 							<!-- <ul class="actions">
 								<li><a href="#" class="button">$400</a></li>
 								<li><a href="#" class="button">$500</a></li>
@@ -91,11 +91,18 @@
 					<div class="container">
 						<div id="profileFirstId" class="row">
 							<section id="profileSection">
-								<button><h2>Posts</h2></button>
-								<button><h2>Saved builds</h2></button>
+								<button class="posts" ><h2>Posts</h2></button>
+								<button class="saved" ><h2>Saved builds</h2></button>
+								<form action="/logout" method="GET">
+									<button class="logout" ><h2>Logout</h2></button>
+								</form>
+								
+									<button class="editProfile" ><h2>Edit profile</h2></button>
+								
+
 							</section>
 							<section id="profileFeed" >
-								<ul id="myPosts">
+								<ul id="myPosts" >
 									<% for(var i=0; i<userPost.length; i++) {%>
 									<li class='post' >
 										
@@ -108,7 +115,35 @@
 									</li>
 									<% } %>
 								</ul>
+								<ul id="savedBuilds" class="inactive">	
+									<% for(var i=0; i<likedPost.length; i++) {%>
+									<li class='post' >
+										<div><a href="/post?id=<%=likedPost[i]._id%>"><img src="uploads/<%=likedPost[i].userIMG.filename%>" alt=""></a></div>
+										<div>
+										<h2 name="caption"><%=likedPost[i].caption %></h2>
+										
+									</div>
+									</li>
+									<% } %>
+
+
+								</ul>
+								<ul id="editProfile" class="inactive">	
+									<h1>Edit your Profile</h1>
+									<li class='post' >
+										<form action="">
+											<input type="text">
+										</form>
+									</li>
+								
+
+
+								</ul>
 							</section>
+							<!-- <section id>
+
+
+							</section> -->
 							<!-- <section id="gpuOne" > -->
 								<!-- <div >
 									<a href="#" class="image featured first"><img src="img/pixel.png" alt="" /></a>
@@ -226,12 +261,12 @@
 				</div>
 
 			<!-- Promo -->
-				<div id="promo-wrapper">
-					<section id="promo">
-						<h2>Neque semper magna et lorem ipsum adipiscing</h2>
-						<a href="#" class="button">Breach the thresholds</a>
-					</section>
-				</div>
+			<div id="promo-wrapper">
+				<section id="promo">
+					<h2>Sign in and check out other people's builds and post your own!</h2>
+					<a href="/builds" class="button">Login</a>
+				</section>
+			</div>
 
 			<!-- Features 2 -->
 				<!-- <div class="wrapper">
@@ -270,57 +305,56 @@
 				</div> -->
 
 			<!-- Footer -->
-				<div id="footer-wrapper">
-					<div id="footer" class="container">
-						<header class="major">
-							<h2>Euismod aliquam vehicula lorem</h2>
-							<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur vel sem sit<br />
-							dolor neque semper magna lorem ipsum feugiat veroeros lorem ipsum dolore.</p>
-						</header>
-						<div class="row">
-							<section class="col-6 col-12-narrower">
-								<form method="post" action="#">
-									<div class="row gtr-50">
-										<div class="col-6 col-12-mobile">
-											<input name="name" placeholder="Name" type="text" />
-										</div>
-										<div class="col-6 col-12-mobile">
-											<input name="email" placeholder="Email" type="text" />
-										</div>
-										<div class="col-12">
-											<textarea name="message" placeholder="Message"></textarea>
-										</div>
-										<div class="col-12">
-											<ul class="actions">
-												<li><input type="submit" value="Send Message" /></li>
-												<li><input type="reset" value="Clear form" /></li>
-											</ul>
-										</div>
+			<div id="footer-wrapper">
+				<div id="footer" class="container">
+					<header class="major">
+						<h2>Leave me a message! </h2>
+						<p>Intrested to know more? I'd love to talk more about computers or how I built this website. </p>
+					</header>
+					<div class="row">
+						<section class="col-6 col-12-narrower">
+							<form method="post" action="#">
+								<div class="row gtr-50">
+									<div class="col-6 col-12-mobile">
+										<input name="name" placeholder="Name" type="text" />
 									</div>
-								</form>
-							</section>
-							<section class="col-6 col-12-narrower">
-								<div class="row gtr-0">
-									<ul class="divided icons col-6 col-12-mobile">
-										<li class="icon brands fa-twitter"><a href="#"><span class="extra">twitter.com/</span>untitled</a></li>
-										<li class="icon brands fa-facebook-f"><a href="#"><span class="extra">facebook.com/</span>untitled</a></li>
-										<li class="icon brands fa-dribbble"><a href="#"><span class="extra">dribbble.com/</span>untitled</a></li>
-									</ul>
-									<ul class="divided icons col-6 col-12-mobile">
-										<li class="icon brands fa-instagram"><a href="#"><span class="extra">instagram.com/</span>untitled</a></li>
-										<li class="icon brands fa-youtube"><a href="#"><span class="extra">youtube.com/</span>untitled</a></li>
-										<li class="icon brands fa-pinterest"><a href="#"><span class="extra">pinterest.com/</span>untitled</a></li>
-									</ul>
+									<div class="col-6 col-12-mobile">
+										<input name="email" placeholder="Email" type="text" />
+									</div>
+									<div class="col-12">
+										<textarea name="message" placeholder="Message"></textarea>
+									</div>
+									<div class="col-12">
+										<ul class="actions">
+											<li><input type="submit" value="Send Message" /></li>
+											<li><input type="reset" value="Clear form" /></li>
+										</ul>
+									</div>
 								</div>
-							</section>
-						</div>
-					</div>
-					<div id="copyright" class="container">
-						<ul class="menu">
-							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
+							</form>
+						</section>
+						<!-- <section class="col-6 col-12-narrower">
+							<div class="row gtr-0">
+								<ul class="divided icons col-6 col-12-mobile">
+									<li class="icon brands fa-twitter"><a href="#"><span class="extra">twitter.com/</span>untitled</a></li>
+									<li class="icon brands fa-facebook-f"><a href="#"><span class="extra">facebook.com/</span>untitled</a></li>
+									<li class="icon brands fa-dribbble"><a href="#"><span class="extra">dribbble.com/</span>untitled</a></li>
+								</ul>
+								<ul class="divided icons col-6 col-12-mobile">
+									<li class="icon brands fa-instagram"><a href="#"><span class="extra">instagram.com/</span>untitled</a></li>
+									<li class="icon brands fa-youtube"><a href="#"><span class="extra">youtube.com/</span>untitled</a></li>
+									<li class="icon brands fa-pinterest"><a href="#"><span class="extra">pinterest.com/</span>untitled</a></li>
+								</ul>
+							</div>
+						</section> -->
 					</div>
 				</div>
+				<div id="copyright" class="container">
+					<ul class="menu">
+						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					</ul>
+				</div>
+			</div>
 
 		</div>
 
